--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,10 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
   color: white;
   /* background-color: #282c34; */
+}
+a {
+  color:white;
 }
 .title{
   font-size: 25px;
