--- a/src/components/SelectGladiator/GladiatorSelector.css
+++ b/src/components/SelectGladiator/GladiatorSelector.css
@@ -6,9 +6,9 @@
 }
 
 .baselayout div {
-    padding: 10px;
+    padding: 1px;
     border: 1px white solid;
-    margin:  10px;   
+    margin:  5px;   
 }
 
 ul {
@@ -21,4 +21,12 @@ li {
     padding-bottom: 3px;
     margin:0;
     padding-left: 0;
+}
+img {
+    border-radius: 50%;
+    height: 150px;
+}
+
+button {
+    height: 40px;
 }
